pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/extproc-filter-stage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: test
  hostnames:
  - "test.com"
  rules:
  - name: before-auth
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /before-auth
  - name: after-ratelimit
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /after-ratelimit
  - name: default-stage
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /default
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
spec:
  ports:
  - port: 9091
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9091
  - port: 9092
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9092
  - port: 9093
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9093
  selector:
    app: extproc
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
